[gd_scene load_steps=2 format=3 uid="uid://52ky4kxsxw6y"]

[ext_resource type="Script" path="res://Lobby/Lobby.gd" id="1_ichpw"]

[node name="Lobby" type="Node2D"]
script = ExtResource("1_ichpw")

[node name="CreateLobbyButton" type="Button" parent="."]
offset_right = 165.0
offset_bottom = 50.0
text = "Create Lobby"
metadata/_edit_use_anchors_ = true

[node name="CreateLobbyTextEdit" type="TextEdit" parent="CreateLobbyButton"]
layout_mode = 0
offset_left = 180.0
offset_top = 28.0
offset_right = 506.0
offset_bottom = 56.0

[node name="CreateLobbyLabel" type="Label" parent="CreateLobbyButton"]
layout_mode = 0
offset_left = 180.0
offset_top = 2.0
offset_right = 329.0
offset_bottom = 25.0
text = "Lobby Name"

[node name="JoinLobbyButton" type="Button" parent="."]
offset_left = -2.0
offset_top = 70.0
offset_right = 163.0
offset_bottom = 120.0
text = "Join Lobby"
metadata/_edit_use_anchors_ = true

[node name="LeaveLobbyButton" type="Button" parent="."]
offset_left = 6.0
offset_top = 592.0
offset_right = 171.0
offset_bottom = 642.0
text = "Leave Lobby"
metadata/_edit_use_anchors_ = true

[node name="StartGameButton" type="Button" parent="."]
offset_left = 950.0
offset_top = 63.0
offset_right = 1115.0
offset_bottom = 113.0
text = "Start Game"
metadata/_edit_use_anchors_ = true

[node name="PlayersPanel" type="Panel" parent="."]
offset_left = 3.0
offset_top = 130.0
offset_right = 185.0
offset_bottom = 581.0

[node name="PlayersPanelLabel" type="Label" parent="PlayersPanel"]
layout_mode = 0
offset_right = 40.0
offset_bottom = 23.0
text = "Players
"

[node name="PlayersPanelRichTextLabel" type="RichTextLabel" parent="PlayersPanel"]
layout_mode = 0
offset_left = 4.0
offset_top = 40.0
offset_right = 174.0
offset_bottom = 445.0

[node name="ChatPanel" type="Panel" parent="."]
offset_left = 212.0
offset_top = 134.0
offset_right = 1114.0
offset_bottom = 585.0

[node name="ChatPanelLabel" type="Label" parent="ChatPanel"]
layout_mode = 0
offset_right = 40.0
offset_bottom = 23.0
text = "Lobby Name"

[node name="ChatPanelRichTextLabel" type="RichTextLabel" parent="ChatPanel"]
layout_mode = 0
offset_left = 11.0
offset_top = 33.0
offset_right = 888.0
offset_bottom = 442.0

[node name="SendMessageButton" type="Button" parent="."]
offset_left = 216.0
offset_top = 598.0
offset_right = 382.0
offset_bottom = 630.0
text = "Send Message"

[node name="SendMessageTextEdit" type="TextEdit" parent="SendMessageButton"]
layout_mode = 0
offset_left = 175.0
offset_right = 883.0
offset_bottom = 34.0

[node name="SteamName" type="Label" parent="."]
offset_left = 945.0
offset_top = 6.0
offset_right = 1143.0
offset_bottom = 36.0

[node name="Label" type="Label" parent="."]
offset_left = 853.0
offset_top = 7.0
offset_right = 938.0
offset_bottom = 33.0
text = "Username:"

[node name="LobbyListPopupPanel" type="PopupPanel" parent="."]
size = Vector2i(600, 400)

[node name="Panel" type="Panel" parent="LobbyListPopupPanel"]
offset_left = 4.0
offset_top = 4.0
offset_right = 596.0
offset_bottom = 396.0

[node name="Label" type="Label" parent="LobbyListPopupPanel/Panel"]
layout_mode = 0
offset_left = 10.0
offset_top = 10.0
offset_right = 89.0
offset_bottom = 36.0
text = "Lobby List"

[node name="ScrollContainer" type="ScrollContainer" parent="LobbyListPopupPanel/Panel"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -20.0
offset_right = 380.0
offset_bottom = 280.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="LobbyListPopupPanel/Panel/ScrollContainer"]
layout_mode = 2

[node name="CloseLobbyListButton" type="Button" parent="LobbyListPopupPanel/Panel"]
layout_mode = 1
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -142.0
offset_top = -41.0
offset_right = -10.0
offset_bottom = -10.0
grow_horizontal = 0
grow_vertical = 0
text = "Close Lobby List"

[connection signal="pressed" from="CreateLobbyButton" to="." method="_on_create_lobby_button_pressed"]
[connection signal="pressed" from="JoinLobbyButton" to="." method="_on_join_lobby_button_pressed"]
[connection signal="pressed" from="LeaveLobbyButton" to="." method="_on_leave_lobby_button_pressed"]
[connection signal="pressed" from="StartGameButton" to="." method="_on_start_game_button_pressed"]
[connection signal="pressed" from="SendMessageButton" to="." method="_on_send_message_button_pressed"]
[connection signal="pressed" from="LobbyListPopupPanel/Panel/CloseLobbyListButton" to="." method="_on_close_lobby_list_button_pressed"]
